--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,8 +7,8 @@ body {
     color: white;
     z-index: -1;
     text-align: center;
-    font-family: 'B612 Mono', monospace;
-    font-size: 12px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 5px;
     font-weight: bold;
   }
   
@@ -38,7 +38,7 @@ body {
   h1 {
     color: rgb(255, 179, 0);
     text-shadow: black 0.1em 0.1em 0.2em;
-    font-size: 100px;
+    font-size: 60px;
   }
   
   h5 {
